# natively-cluely-ai-assistant

./: README.md  package-lock.json  package.json
electron/: LLMHelper.ts  WindowHelper.ts  ipcHandlers.ts  main.ts  preload.ts
electron/audio/: NativelyProSTT.ts  nativeModuleLoader.ts
electron/config/: constants.ts
electron/services/: CalendarManager.ts  WindowsKeyboardHook.ts  keyboardPipelineIpc.ts
native-module/: Cargo.toml  index.d.ts  index.js
native-module/src/: lib.rs
native-module/src/keyboard/: mod.rs  raw_input.rs  win_hook.rs
scripts/: ensure-sqlite-vec.js
src/: App.tsx
src/components/: NativelyInterface.tsx  NativelyQuotaBanner.tsx  ProfileIntelligenceSettings.tsx  SettingsOverlay.tsx
src/components/settings/: AIProvidersSettings.tsx  NativelyApiSettings.tsx  NativelyProSettings.tsx  Sidebar.tsx
src/components/trial/: FreeTrialBanner.tsx  FreeTrialModal.tsx
src/config/: urls.ts
src/hooks/: useRawInputNudge.ts  useTypeMode.ts
src/types/: keyboardEvent.ts
