
[package]
name = "natively-audio"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.8.3", features = ["napi4"] }
napi-derive = "3.5.2"
cpal = "0.15.2"
ringbuf = "0.4"
anyhow = "1.0"
once_cell = "1.18.0"
rubato = "0.16"
rand = "0.8"
sha2 = "0.10"
machine-uid = "0.5"
reqwest = { version = "0.12", features = ["blocking"] }
serde_json = "1.0"
webrtc-vad = "0.4"
# Zero-copy reinterpret of &[i16] as &[u8] for napi Buffer hand-off.
# Replaces a per-chunk per-sample to_le_bytes loop in the DSP hot path.
bytemuck = "1"

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { version = "0.11.10", features = ["ca", "cm", "av", "cat", "dispatch", "ns", "sc", "cf", "blocks", "objc"] }

[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.13.0"
# windows-rs 0.52 features. Each feature gates a specific set of Win32 symbols
# we actually call — listed inline so future audits can prune confidently.
windows = { version = "0.52.0", features = [
    # Audio capture (WASAPI) — original feature set.
    "Win32_Media_Audio",                # IAudioClient, IMMDevice, WAVEFORMATEX, PKEY_*
    "Win32_System_Com",                 # CoInitializeEx, CLSIDFromString, CoCreateInstance
    "Win32_System_Threading",           # GetCurrentThreadId (also used by keyboard/*)
    # Keyboard pipeline — issue #225, Phase 2 (LL hook) + Phase 3 (raw input).
    "Win32_Foundation",                 # HINSTANCE, HWND, LPARAM, LRESULT, WPARAM
    "Win32_System_LibraryLoader",       # GetModuleHandleW
    "Win32_UI_Input",                   # RegisterRawInputDevices, RAWINPUT* (Phase 3 only)
    "Win32_UI_Input_KeyboardAndMouse",  # ToUnicode, VK_* constants
    "Win32_UI_WindowsAndMessaging",     # SetWindowsHookExW, GetMessageW, CreateWindowExW, etc.
    "Win32_Graphics_Gdi",               # WNDCLASSEXW / RegisterClassExW pull HBRUSH+HICON (Phase 3 only)
] }
tracing = "0.1.44"
